# LambChat

./: CITATION.cff  README.md  README_CN.md  pyproject.toml
docs/: CNAME
docs/en/deploy/: docker.md
docs/superpowers/specs/: 2026-05-23-team-ux-theme-design.md
docs/zh/deploy/: docker.md
frontend/: package.json  tsconfig.tsbuildinfo
frontend/public/: sitemap.xml  sw.js
frontend/src/: App.tsx  pwa.ts  pwaGuards.ts
frontend/src/__tests__/: pwaGuards.test.ts  serviceWorkerFetch.test.js
frontend/src/components/chat/: ChatInput.tsx  MentionPopup.tsx  WelcomePage.tsx
frontend/src/components/chat/ChatMessage/: RevealArtifactsSummary.tsx  revealArtifacts.ts
frontend/src/components/documents/: DocumentPreview.tsx
frontend/src/components/documents/previews/: WordPreview.tsx  wordPreviewUtils.ts
frontend/src/components/documents/utils/: fileTypeChecks.ts  index.ts
frontend/src/components/fileLibrary/: RevealedFilesPanel.tsx
frontend/src/components/fileLibrary/__tests__/: utils.test.ts
frontend/src/components/layout/: UserMenu.tsx
frontend/src/components/layout/AppContent/: AppShell.tsx  Header.tsx  appToastLayout.ts  appViewport.ts  index.tsx  taskNotificationGuards.ts  useWebSocketNotifications.tsx
frontend/src/components/panels/SidebarParts/: SessionListContent.tsx  SidebarRail.tsx
frontend/src/components/persona/: PersonaPresetSelector.tsx
frontend/src/components/profile/: ProfileModal.tsx
frontend/src/components/profile/tabs/: ProfileInfoTab.tsx
frontend/src/hooks/: useAgent.ts  useMentionState.ts
frontend/src/hooks/useAgent/: agentSelection.ts
frontend/src/i18n/locales/: en.json  ja.json  ko.json  ru.json  zh.json
frontend/src/styles/: base.css  chat.css
scripts/: create_e2b_template.py
src/agents/core/: subagent_prompts.py
src/agents/fast_agent/: nodes.py
src/agents/search_agent/: nodes.py  prompt.py
src/api/: main.py
src/api/routes/: chat.py
src/infra/: websocket.py
src/infra/agent/middleware/: prompt_caching.py
src/infra/backend/: skills_store.py
src/infra/share/: seo.py
src/infra/task/: executor.py
src/infra/team/: manager.py
src/kernel/schemas/: agent.py
tests/agents/: test_disabled_skills_config_propagation.py
tests/agents/core/: test_subagent_prompts.py
tests/api/: test_shared_page_route.py
tests/infra/: test_websocket_manager.py
tests/infra/agent/: test_prompt_caching_middleware.py
tests/infra/backend/: test_skills_store_backend.py
tests/infra/share/: test_seo.py
tests/infra/task/: test_executor_notifications.py
tests/unit/infra/: test_team_manager.py
(+5 files in other folders)
